# iis3dwb-rs

./: Cargo.toml  README.md  memory.x
.cargo/: config.toml
examples/: nrf52dk.rs
src/: fifos.rs  interrupts.rs  lib.rs  register.rs  util.rs  wakeups.rs
