[package]
name = "iis3dwb"
description = "An embedded-hal driver for the IIS3DWB accelerometer that implements the generic accelerometer trait"
version = "0.0.1"
license = "Apache-2.0 OR MIT"
authors = [
    "Mehmet Ali Anil <nehmet@grusbv.com>"
    # TODO: I am not sure the other authors would be willing to be listed, ask them!
    # "Benjamin Bergman <ben@benbergman.ca>",
    # "Paul Sajna <sajattack@gmail.com>", 
    # "Jesse Braham <jesse@beta7.io>",
]
keywords = [
    "embedded-hal-driver",
    "accelerometer",
]
repository = "https://github.com/mehmetalianil/iis3dwb-rs"
edition = "2018"

[features]
# set logging levels here
default = [
]


# # cargo build/run
# [profile.dev]
# codegen-units = 1
# debug = 2
# debug-assertions = true # <-
# incremental = false
# opt-level = 3 # <-
# overflow-checks = true # <-
# panic = "abort"

# # cargo test
# [profile.test]
# codegen-units = 1
# debug = 2
# debug-assertions = true # <-
# incremental = false
# opt-level = 3 # <-
# overflow-checks = true # <-

# # cargo build/run --release
# [profile.release]
# codegen-units = 1
# debug = 2
# debug-assertions = false # <-
# incremental = false
# lto = 'fat'
# opt-level = 3 # <-
# overflow-checks = false # <-

# # cargo test --release
# [profile.bench]
# codegen-units = 1
# debug = 2
# debug-assertions = false # <-
# incremental = false
# lto = 'fat'
# opt-level = 3 # <-
# overflow-checks = false # <-

[dependencies]
accelerometer = "~0.12"
num_enum = { version = "~0.5", default-features = false }
defmt = "0.3.0"
defmt-rtt = "0.3.0"
panic-probe = { version = "0.3.0", features= ["print-defmt"] }
nrf52840-hal = {version = "0.14.0",features = ["rt"] } 
embedded-hal    = "0.2.6"
cortex-m        = { version = "0.7.2" }
cortex-m-rt = "0.7.0"

[[example]]   
name = 'nrf52dk'
